<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.loanmanager.AddDebtorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_entire_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/entire_name"/>

        <EditText
            android:id="@+id/txt_entire_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/lbl_init_loan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/txt_init_loan"/>

    <EditText
        android:id="@+id/txt_init_loan"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:singleLine="true"
        android:inputType="number"
        android:ems="10"
        android:layout_weight="1"
        android:text="0"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_installments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lbl_installments"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgp_installments"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb1"
                android:id="@+id/rb1"
                android:checked="true" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb2"
                android:id="@+id/rb2" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb3"
                android:id="@+id/rb3" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_future"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_future_value"/>

        <TextView
            android:id="@+id/lbl_future_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbl_picture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_picture" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_image_hint"
            android:clickable="true"
            android:background="#000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_launcher"
            android:text="@string/btn_save" />
    </LinearLayout>
</LinearLayout>
